# codex-account-manager

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  backup_current_account.py  check_usage.py  codex_account_manager.py  codex_account_manager_web.py  config_utils.py  requirements.txt  start.sh  switch_account.py  usage_checker.py
.github/workflows/: python-tests.yml  release.yml  tauri-build.yml
codex-tauri-app/: .gitignore  README.md  package.json  vite.config.js
codex-tauri-app/src/: index.html  main.js  styles.css
codex-tauri-app/src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
codex-tauri-app/src-tauri/capabilities/: default.json
codex-tauri-app/src-tauri/icons/: icon.icns
codex-tauri-app/src-tauri/src/: lib.rs
